--- a/IMapp/templates/home.html
+++ b/IMapp/templates/home.html
@@ -71,24 +71,24 @@
                 <div class="row clearfix">
                     <div class="col-md-12 column">
                         <div class="panel-group groups" id="panel-9875">
-                            <div class="panel panel-default">
-                                <div class="panel-heading">
-                                    <a class="panel-title" data-toggle="collapse" href="#panel-element-968396">Group
-                                        2</a>
-                                </div>
-                                <div id="panel-element-968396" class="panel-collapse collapse">
-                                    <ul class="list-group contacts" id="contact-list"></ul>
-                                </div>
-                            </div>
-                            <div class="panel panel-default">
-                                <div class="panel-heading">
-                                    <a class="panel-title" data-toggle="collapse" href="#panel-element-116491">Group
-                                        1</a>
-                                </div>
-                                <div id="panel-element-116491" class="panel-collapse collapse">
-                                    <ul class="list-group contacts" id="contact-list"></ul>
-                                </div>
-                            </div>
+{#                            <div class="panel panel-default">#}
+{#                                <div class="panel-heading">#}
+{#                                    <a class="panel-title" data-toggle="collapse" href="#panel-element-968396">Group#}
+{#                                        2</a>#}
+{#                                </div>#}
+{#                                <div id="panel-element-968396" class="panel-collapse collapse">#}
+{#                                    <ul class="list-group contacts" id="contact-list"></ul>#}
+{#                                </div>#}
+{#                            </div>#}
+{#                            <div class="panel panel-default">#}
+{#                                <div class="panel-heading">#}
+{#                                    <a class="panel-title" data-toggle="collapse" href="#panel-element-116491">Group#}
+{#                                        1</a>#}
+{#                                </div>#}
+{#                                <div id="panel-element-116491" class="panel-collapse collapse">#}
+{#                                    <ul class="list-group contacts" id="contact-list"></ul>#}
+{#                                </div>#}
+{#                            </div>#}
                         </div>
                     </div>
                 </div>
