--- a/IMapp/templates/index.html
+++ b/IMapp/templates/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="/static/css/reset.css"/>
     <link rel="stylesheet" href="/static/css/style_index.css"/>
 
-    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
+    <script src="/static/js/jquery-2.2.4.min.js"></script>
     <script src="http://apps.bdimg.com/libs/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
 
